# AI-language-learning-partner

./: .env.example  LinguaLoop_Agent_Design.ipynb  LinguaLoop_Agent_v2.ipynb  README.md  lingualoop.sqlite  main.py  pyproject.toml  requirements.txt  run_demo.py
.streamlit/: secrets.toml.example
backend/: __init__.py  agents.py  auth.py  config.py  db.py  graph.py  main.py  state.py  stt.py  tools.py  tts.py  vectorstore.py  youtube_service.py
chroma/: chroma.sqlite3
frontend/: streamlit_app.py
tests/: test_nodes.py
