[project]
name = "ai-language-learning-partner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "litellm>=1.91.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
