[project]
name = "lingualoop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "google-api-python-client>=2.198.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.45.0",
    "pydantic>=2",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.7.4",
]
